--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -16,10 +16,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbarTop"
-        android:paddingBottom="15dp"
-        android:paddingEnd="15dp"
         android:paddingStart="15dp"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="15dp">
 
 
         <LinearLayout
@@ -74,8 +74,8 @@
             android:id="@+id/btnSpeaker"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@color/gray"
             android:layout_alignParentEnd="true"
+            android:background="@color/gray"
             tools:src="@drawable/ic_speaker" />
 
         <TextView
@@ -83,8 +83,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btnSpeaker"
-            android:layout_marginBottom="4dp"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:lineSpacingMultiplier="1.1"
             android:textSize="17sp"
             tools:text="@string/quiz_question_title" />
@@ -94,8 +94,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvQuestionTitle"
-            android:layout_marginBottom="4dp"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:lineSpacingMultiplier="1.1"
             android:textSize="17sp"
             tools:text="@string/quiz_prompt" />
